tests/ui/traits/ignore-err-impls.stderr
error[E0425]: cannot find type `Type` in this scope
  --> $DIR/ignore-err-impls.rs:6:14
   |
LL | impl Generic<Type> for S {}
   |              ^^^^ not found in this scope
   |
help: consider importing this struct
   |
LL + use std::mem::type_info::Type;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
